# aurelith-desktop

./: README.md  index.html  package.json
.github/workflows/: ci.yml
docs/: brand.md  development.md  product-spec.md  roadmap.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: SpacesPanel.tsx  TasksPanel.tsx
src/lib/: types.ts
